<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/black"
        android:contentDescription="@string/image_which_is_getting_inferred" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/logout" />


    <Button
        android:id="@+id/fetch_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetch_profile" />

    <TextView
        android:id="@+id/inference_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image" />

    <Button
        android:id="@+id/do_inference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_inference" />

</LinearLayout>