<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profile_name_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_name_label"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/loading"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/profile_email_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_email_label"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/loading"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/profile_role_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/role"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_role_label"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/loading"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxHeight="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/some_error_occurred"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/logout" />

</LinearLayout>